--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@editorjs/code": "^2.5.0",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/raw": "^2.1.2",
+    "@editorjs/table": "^1.2.2",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.6.0",
